force-app/main/default/objects/Course__c/fields/Additional_Confirmation_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Confirmation_Information__c</fullName>
    <label>Additional Confirmation Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>