force-app/main/default/objects/Course__c/fields/Additional_Course_Finder_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Course_Finder_Information__c</fullName>
    <label>Additional Course Finder Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>