force-app/main/default/objects/Course__c/fields/Additional_Offer_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Offer_Information__c</fullName>
    <label>Additional Offer Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>