force-app/main/default/objects/Course__c/fields/All_Sessions__c.field-meta.xml
<CustomField>
    <fullName>All_Sessions__c</fullName>
    <label>All Sessions</label>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>