force-app/main/default/objects/Course__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(Booking_Type_Override__c))), TEXT(Booking_Type_Override__c),  TEXT(Branch__r.Booking_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Type</label>
    <type>Text</type>
</CustomField>