force-app/main/default/objects/Course__c/fields/Booking_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type_Override__c</fullName>
    <label>Booking Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Quick Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>