force-app/main/default/objects/Course__c/fields/Bracket_Course__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bracket courses are courses with more than 3 hours allocated as single-sex sessions.</inlineHelpText>
    <label>Bracket Course</label>
    <type>Checkbox</type>
</CustomField>