force-app/main/default/objects/Course__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Courses (Branch)</relationshipLabel>
    <relationshipName>BranchCourses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>