force-app/main/default/objects/Course__c/fields/Break_Even_Number_Of_Places__c.field-meta.xml
<CustomField>
    <fullName>Break_Even_Number_Of_Places__c</fullName>
    <formula>IF( Include_Additional_Admin_Cost__c,MCEILING((Total_Estimated_Costs__c +( MCEILING(Total_Estimated_Costs__c/Course_Fee__c)*10))/Course_Fee__c),MCEILING(Total_Estimated_Costs__c/Course_Fee__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break Even Number Of Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>