force-app/main/default/objects/Course__c/fields/Break_Even_Number_Reached__c.field-meta.xml
<CustomField>
    <fullName>Break_Even_Number_Reached__c</fullName>
    <formula>Confirmed_Places__c &gt;= Break_Even_Number_Of_Places__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break Even Number Reached</label>
    <type>Checkbox</type>
</CustomField>