force-app/main/default/objects/Course__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low bookings - 0 bookings</fullName>
            </value>
            <value>
                <fullName>Low bookings - 1 bookings</fullName>
            </value>
            <value>
                <fullName>Low bookings - 2 bookings</fullName>
            </value>
            <value>
                <fullName>Low bookings - 3 bookings</fullName>
            </value>
            <value>
                <fullName>Low bookings - 4 or more bookings</fullName>
            </value>
            <value>
                <fullName>Low bookings - client not happy with small group</fullName>
            </value>
            <value>
                <fullName>Practitioner resigned</fullName>
            </value>
            <value>
                <fullName>Practitioner withdrew - no LtP</fullName>
            </value>
            <value>
                <fullName>Practitioner withdrew - other</fullName>
            </value>
            <value>
                <fullName>Student / probationer withdrew - no LtP</fullName>
            </value>
            <value>
                <fullName>Student / probationer withdrew - other</fullName>
            </value>
            <value>
                <fullName>Over capacity</fullName>
            </value>
            <value>
                <fullName>Service withdrawn</fullName>
            </value>
            <value>
                <fullName>Course added in error</fullName>
            </value>
            <value>
                <fullName>Private session cancelled by client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>