force-app/main/default/objects/Course__c/fields/Confirmed_Places_OLD__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Places_OLD__c</fullName>
    <label>Confirmed Places OLD</label>
    <summaryFilterItems>
        <field>Booking__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>