force-app/main/default/objects/Course__c/fields/Count_of_Confirmed_Scheduled_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Confirmed_Scheduled_Sessions__c</fullName>
    <label>Count of Confirmed Scheduled Sessions</label>
    <summaryFilterItems>
        <field>Session__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Scheduled Session</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Session__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>