force-app/main/default/objects/Course__c/fields/Count_of_Sessions_Without_Fee_Rates__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sessions_Without_Fee_Rates__c</fullName>
    <label>Count of Sessions Without Fee Rates</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>