force-app/main/default/objects/Course__c/fields/Count_of_Sessions_Without_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sessions_Without_Practitioner__c</fullName>
    <label>Count of Sessions Without Practitioner</label>
    <summaryFilterItems>
        <field>Session__c.Practitioner_Chosen__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>