force-app/main/default/objects/Course__c/fields/Count_of_Unconfirmed_Non_Reunion_Session__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Unconfirmed_Non_Reunion_Session__c</fullName>
    <label>Count of Unconfirmed Non-Reunion Session</label>
    <summaryFilterItems>
        <field>Session__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Session__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Reunion</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>