force-app/main/default/objects/Course__c/fields/Count_of_Unconfirmed_Reunion_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Unconfirmed_Reunion_Sessions__c</fullName>
    <description>Used inside of Summary__c field.</description>
    <inlineHelpText>Used inside of Summary__c field.</inlineHelpText>
    <label>Count of Unconfirmed Reunion Sessions</label>
    <summaryFilterItems>
        <field>Session__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Session__c.Type__c</field>
        <operation>equals</operation>
        <value>Reunion</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>