force-app/main/default/objects/Course__c/fields/Couples_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Couples_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Couples Allowed</label>
    <type>Checkbox</type>
</CustomField>