force-app/main/default/objects/Course__c/fields/Course_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Closed_Date__c</fullName>
    <label>Course Closed Date</label>
    <type>DateTime</type>
</CustomField>