force-app/main/default/objects/Course__c/fields/Course_Reference__c.field-meta.xml
<CustomField>
    <fullName>Course_Reference__c</fullName>
    <formula>PSA_Area__c + &#39;/&#39; +  Name</formula>
    <label>Course Reference</label>
    <type>Text</type>
</CustomField>