force-app/main/default/objects/Course__c/fields/Course_Start_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Formatted__c</fullName>
    <formula>TEXT(DAY(Start_Date__c ))
+ &#39; &#39; +
LEFT(CASE(
MONTH(Start_Date__c ),
1, &#39;January&#39;,
2, &#39;February&#39;,
3, &#39;March&#39;,
4, &#39;April&#39;,
5, &#39;May&#39;,
6, &#39;June&#39;,
7, &#39;July&#39;,
8, &#39;August&#39;,
9, &#39;September&#39;,
10, &#39;October&#39;,
11, &#39;November&#39;,
12, &#39;December&#39;,
null
),3)
+ &#39; &#39; +
TEXT(YEAR(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Start Formatted</label>
    <type>Text</type>
</CustomField>