force-app/main/default/objects/Course__c/fields/Course_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Sub_Type__c</fullName>
    <label>Course Sub Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Course_Sub_Type</valueSetName>
    </valueSet>
</CustomField>