force-app/main/default/objects/Course__c/fields/Drop_In_Schedule_Information__c.field-meta.xml
<CustomField>
    <fullName>Drop_In_Schedule_Information__c</fullName>
    <label>Drop In Schedule Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>