force-app/main/default/objects/Course__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <summarizedField>Session__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Session__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Reunion</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>