force-app/main/default/objects/Course__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <summarizedField>Session__c.End__c</summarizedField>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>