force-app/main/default/objects/Course__c/fields/Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Enquiries__c</fullName>
    <label>Enquiries</label>
    <summaryFilterItems>
        <field>Booking__c.Status__c</field>
        <operation>equals</operation>
        <value>Enquiry</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>