force-app/main/default/objects/Course__c/fields/Enquiries_PSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA_Name__c</fullName>
    <formula>Branch__r.Enquiries_PSA__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries PSA Name</label>
    <type>Text</type>
</CustomField>