force-app/main/default/objects/Course__c/fields/Enquiries_PSA_Phone__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA_Phone__c</fullName>
    <formula>Branch__r.Enquiries_PSA_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries PSA Phone</label>
    <type>Text</type>
</CustomField>