force-app/main/default/objects/Course__c/fields/Estimated_Practitioner_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Practitioner_Fees__c</fullName>
    <label>Estimated Practitioner Fees</label>
    <summaryFilterItems>
        <field>Estimated_Costs__c.Type__c</field>
        <operation>equals</operation>
        <value>Practitioner Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Estimated_Costs__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>