force-app/main/default/objects/Course__c/fields/Estimated_Surplus_Deficit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Surplus_Deficit__c</fullName>
    <formula>Total_Actual_Income__c - Total_Estimated_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Surplus \ Deficit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>