force-app/main/default/objects/Course__c/fields/Estimated_Travel_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Travel_Costs__c</fullName>
    <label>Estimated Travel Costs</label>
    <summaryFilterItems>
        <field>Estimated_Costs__c.Type__c</field>
        <operation>equals</operation>
        <value>Travel</value>
    </summaryFilterItems>
    <summaryForeignKey>Estimated_Costs__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>