force-app/main/default/objects/Course__c/fields/Estimated_Venue_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Venue_Costs__c</fullName>
    <label>Estimated Venue Costs</label>
    <summaryFilterItems>
        <field>Estimated_Costs__c.Type__c</field>
        <operation>equals</operation>
        <value>Venue</value>
    </summaryFilterItems>
    <summaryForeignKey>Estimated_Costs__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>