force-app/main/default/objects/Course__c/fields/Final_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Session_Date__c</fullName>
    <description>End Date field excludes reunions. This field does not.</description>
    <label>Final Session Date</label>
    <summarizedField>Session__c.Date__c</summarizedField>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>