force-app/main/default/objects/Course__c/fields/Has_Virtual_Teaching_Content__c.field-meta.xml
<CustomField>
    <fullName>Has_Virtual_Teaching_Content__c</fullName>
    <formula>Virtual_Sessions__c  &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Virtual Teaching Content</label>
    <type>Checkbox</type>
</CustomField>