force-app/main/default/objects/Course__c/fields/Hide_From_Course_Finder__c.field-meta.xml
<CustomField>
    <fullName>Hide_From_Course_Finder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide From Course Finder</label>
    <type>Checkbox</type>
</CustomField>