force-app/main/default/objects/Course__c/fields/Hide_From_Website__c.field-meta.xml
<CustomField>
    <fullName>Hide_From_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide From Website</label>
    <type>Checkbox</type>
</CustomField>