force-app/main/default/objects/Course__c/fields/Include_Additional_Admin_Cost__c.field-meta.xml
<CustomField>
    <fullName>Include_Additional_Admin_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to include an additional £10 fee per course place to cover PSA overheads</inlineHelpText>
    <label>Include Additional Admin Cost</label>
    <type>Checkbox</type>
</CustomField>