force-app/main/default/objects/Course__c/fields/Is_Future_Non_Viable__c.field-meta.xml
<CustomField>
    <fullName>Is_Future_Non_Viable__c</fullName>
    <formula>Confirmed_Places__c &lt; Break_Even_Number_Of_Places__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Future Non-Viable</label>
    <type>Checkbox</type>
</CustomField>