force-app/main/default/objects/Course__c/fields/Legacy_Reference__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Reference__c</fullName>
    <label>Legacy Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>