force-app/main/default/objects/Course__c/fields/Main_Online_Venue__c.field-meta.xml
<CustomField>
    <fullName>Main_Online_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Online Venue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Venue__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Virtual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Courses (Main Online Venue)</relationshipLabel>
    <relationshipName>CoursesOnline</relationshipName>
    <type>Lookup</type>
</CustomField>