force-app/main/default/objects/Course__c/fields/Main_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Main_Practitioner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main Practitioner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>