force-app/main/default/objects/Course__c/fields/Main_Practitioner_Licence__c.field-meta.xml
<CustomField>
    <fullName>Main_Practitioner_Licence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main Practitioner Licence</label>
    <referenceTo>Licence_To_Practice__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>