force-app/main/default/objects/Course__c/fields/Main_Practitioner_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Practitioner_Name__c</fullName>
    <formula>Main_Practitioner_Licence__r.Practitioner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Practitioner Name</label>
    <type>Text</type>
</CustomField>