force-app/main/default/objects/Course__c/fields/Main_Practitioner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Practitioner_Phone__c</fullName>
    <description>Used in &quot;Reunion Confirmed Public&quot;, Reunion &quot;Confirmed Public No Venue&quot; email templates.</description>
    <formula>Main_Practitioner__r.Phone</formula>
    <label>Main Practitioner Phone</label>
    <type>Text</type>
</CustomField>