force-app/main/default/objects/Course__c/fields/Main_Venue__c.field-meta.xml
<CustomField>
    <fullName>Main_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>