force-app/main/default/objects/Course__c/fields/Main_Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Venue_Name__c</fullName>
    <formula>IF(
	Has_Virtual_Teaching_Content__c = true,
	&quot;For parents in and around &quot; + Main_Venue__r.Town__c + &quot;, &quot; + LEFT(Main_Venue__r.Postcode__c, FIND(&quot; &quot;, Main_Venue__r.Postcode__c) - 1) + &quot;.&quot;,
	IF(
		NOT(ISBLANK(Main_Venue__c)),
		IF(
			NOT(
				ISBLANK(Main_Venue__r.Host__c)
			),
			&quot;Course Leader&#39;s Home&quot;,
			Main_Venue__r.Name
		),
		&quot;&quot;
	)
)</formula>
    <label>Main Venue Name</label>
    <type>Text</type>
</CustomField>