force-app/main/default/objects/Course__c/fields/Not_Confirmed_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Not_Confirmed_Sessions__c</fullName>
    <label>Not Confirmed Sessions</label>
    <summaryFilterItems>
        <field>Session__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Session__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Reunion</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>