force-app/main/default/objects/Course__c/fields/Number_Of_Days_To_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_To_Start_Date__c</fullName>
    <formula>Start_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Days To Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>