force-app/main/default/objects/Course__c/fields/Number_of_places__c.field-meta.xml
<CustomField>
    <fullName>Number_of_places__c</fullName>
    <label>Number of places</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>