force-app/main/default/objects/Course__c/fields/Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions__c</fullName>
    <label>Number of Sessions</label>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>