force-app/main/default/objects/Course__c/fields/Offer_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Offer_Email_Text__c</fullName>
    <label>Offer Email Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>