force-app/main/default/objects/Course__c/fields/Overbooking_allowed__c.field-meta.xml
<CustomField>
    <fullName>Overbooking_allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overbooking Allowed</label>
    <type>Checkbox</type>
</CustomField>