force-app/main/default/objects/Course__c/fields/Practitioner_Fee_Difference__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Fee_Difference__c</fullName>
    <formula>Total_Fees_Claimed__c - Total_Practitioner_Fees__c</formula>
    <label>Practitioner Fee Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>