force-app/main/default/objects/Course__c/fields/Practitioner_Fee_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Fee_Uplift__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Practitioner Fee % Uplift</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>