force-app/main/default/objects/Course__c/fields/Private_Course__c.field-meta.xml
<CustomField>
    <fullName>Private_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Course</label>
    <type>Checkbox</type>
</CustomField>